# auth-cluster

./: README.md
auth-service/: dockerfile  pyproject.toml
auth-service/src/: key_util.py  main.py
charts/: values.yaml
charts/templates/: auth-service.yaml  ehco-service.yaml  gateway.yaml  jwt-token-filter.yaml  virtualservice.yaml
echo-service/: pyproject.toml
echo-service/src/: main.py
envoy-auth/: Chart.yaml  values.yaml
envoy-auth/templates/: namespace.yaml
envoy-auth/templates/filter/: envoy-token-filter.yaml
envoy-auth/templates/service/: auth-service.yaml  ehco-service.yaml
k8s-manifests/: auth-service.yaml  ehco-service.yaml
