[tool.poetry]
name = "auth-service"
version = "0.1.0"
description = ""
authors = ["San Kim <waterfog9580@gmail.com>"]
packages = [{ from = "src", include = "*" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.1"
uvicorn = "^0.23.2"
cryptography = "^41.0.3"
python-jose = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
