[tool.poetry]
name = "echo-service"
version = "0.1.0"
description = ""
authors = ["San Kim <waterfog9580@gmail.com>"]
packages = [{ from = "src", include = "*" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.1"
uvicorn = "^0.23.2"
pyjwt = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
